fix: jump to detail

--- a/app/job-search/[path]/components/jobCard/index.module.scss
+++ b/app/job-search/[path]/components/jobCard/index.module.scss
@@ -10,7 +10,7 @@
         border-radius: 10px;
         background: #fff;
         position: relative;
-
+        cursor: pointer;
         .topContainer {
             width: 100%;
             height: 130px;
